Overflow wrap fix

--- a/app/note/note.module.css
+++ b/app/note/note.module.css
@@ -3,4 +3,5 @@
     max-width: 50em;
     margin-left: 1.5em;
     margin-right: 1.5em;
+    overflow-wrap: break-word;
 }
